<resources>
    <string name="app_name">AukdeShop</string>
    <string name="content_description">imagen</string>
    <string name="title_login">INICIAR SESIÓN</string>
    <string name="et_hint_store">Nombre del negocio ó empresa</string>
    <string name="et_hint_email_id">Correo electrónico</string>
    <string name="et_hint_password">Contraseña</string>
    <string name="lbl_forgot_password">Olvidé mi constraseña?</string>
    <string name="btn_lbl_login">Iniciar Sesión</string>
    <string name="facebook_login">Iniciar con\nFacebook</string>
    <string name="google_login">Iniciar con\nGoogle</string>
    <string name="don_t_have_an_account">No tienes una cuenta?</string>
    <string name="register"><u>Registrar</u></string>
    <string name="create_an_account">CREA UNA CUENTA</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_first_name">Nombres</string>
    <string name="hint_dni">DNI</string>
    <string name="et_hint_confirm_password">Confirmar contraseña</string>
    <string name="i_agree_to_the_terms_and_condition">Acepto los <u> Terminos &amp; Condiciones </u></string>
    <string name="delivery">¿Cuenta con el servicio de entrega a domicilio?</string>
    <string name="btn_lbl_register">Registrar</string>
    <string name="already_have_an_account">Ya tienes una cuenta?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_gender">Seleccione su género.</string>
    <string name="err_msg_enter_location">Agrege la ubicación del negocio.</string>
    <string name="err_msg_enter_first_name">Ingrese sus nombres.</string>
    <string name="err_msg_enter_last_name">Ingrese su apellido.</string>
    <string name="err_msg_dni">Ingrese su DNI.</string>
    <string name="err_msg_ruc">Ingrese su RUC.</string>
    <string name="err_msg_store">Ingrese el nombre de su empresa ó negocio.</string>
    <string name="err_msg_enter_email">Ingrese su Email.</string>
    <string name="err_msg_enter_delivery">Seleccione si tiene entrega a domicilio.</string>
    <string name="err_msg_enter_password">Ingrese su contraseña.</string>
    <string name="err_msg_enter_confirm_password">Confirme su contraseña.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Revise su contraseña!.</string>
    <string name="err_msg_agree_terms_and_condition">Acepte los términos y condiciones.</string>
    <string name="please_wait">ESPERE&#8230;</string>
    <string name="updating">Actualizando&#8230;</string>
    <string name="validate_card">Validando tarjeta espere&#8230;</string>
    <string name="success_card">Tarjeta validada!, cobrando&#8230;</string>
    <string name="success_payment">PAGADO!</string>
    <string name="title_forgot_password">OLVIDÓ SU CONTRASEÑA?</string>
    <string name="forgot_password_title_description">Ingrese su nombre de usuario y dirección de correo electrónico, le enviaremos un correo electrónico para restablecer su contraseña</string>
    <string name="btn_lbl_submit">Guardar</string>
    <string name="btn_lbl_add">Agregar</string>
    <string name="email_sent_success">¡Correo electrónico enviado con éxito para restablecer su contraseña!</string>
    <string name="register_success">Estás registrado correctamente.</string>
    <string name="provider_register_success">Solicitud enviada!.</string>
    <string name="title_complete_profile">PERFIL COMPLETO</string>
    <string name="et_hint_mobile_number">Número telefónico</string>
    <string name="rb_lbl_male">MASCULINO</string>
    <string name="rb_lbl_female">FEMENINO</string>
    <string name="btn_lbl_save">Guardar</string>
    <string name="read_storage_permission_denied">Oops, acabas de denegar el permiso de almacenamiento. También puede permitirlo desde la configuración.</string>
    <string name="image_selection_failed">¡Error en la selección de imágenes!</string>
    <string name="err_msg_enter_mobile_number">Introduzca el número de móvil.</string>
    <string name="msg_profile_update_success">Tu perfil se ha actualizado correctamente.</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_dashboard">Inicio</string>
    <string name="title_products">Productos</string>
    <string name="title_orders">Mis compras</string>
    <string name="please_click_back_again_to_exit">Vuelva a hacer clic en Atrás para salir.</string>
    <string name="action_settings">Menú superior</string>
    <string name="title_settings">CONFIGURACIONES</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_addresses">Direcciones</string>
    <string name="btn_lbl_logout">Cerrar Sesión</string>
    <string name="title_edit_profile">EDITAR PERFIL</string>
    <string name="action_add_product">Agregar Producto</string>
    <string name="title_add_product">AGREGAR PRODUCTO</string>
    <string name="et_hint_product_title">Nombre del producto</string>
    <string name="et_hint_product_sku">Código SKU</string>
    <string name="et_hint_product_price">Precio (S/)</string>
    <string name="et_hint_product_description">Descripción del producto</string>
    <string name="et_hint_product_quantity">Cantidad</string>
    <string name="err_msg_select_product_image">Seleccione una imagen.</string>
    <string name="err_msg_enter_product_title">Ingrese el nombre del producto.</string>
    <string name="err_msg_enter_product_sku">Ingrese el codigo SKU.</string>
    <string name="err_msg_enter_product_price">Ingrese el precio del producto.</string>
    <string name="err_msg_enter_product_description">Agregue una descripción.</string>
    <string name="err_msg_enter_product_sku_exist">El código SKU ya existe!</string>
    <string name="err_msg_enter_product_quantity">Ingrese la cantidad.</string>
    <string name="product_uploaded_success_message">Producto subido correctamente!.</string>
    <string name="no_products_added_yet">¡No se han añadido productos todavía!</string>
    <string name="no_dashboard_item_found">¡No se encontraron productos!</string>
    <string name="product_delete_success_message">Su producto se eliminó correctamente.</string>
    <string name="delete_dialog_title">Borrar</string>
    <string name="delete_dialog_message">¿Está seguro de que desea eliminar el producto?</string>
    <string name="cancel_dialog_title">Cancelar pedido</string>
    <string name="cancel_dialog_message">¿Está seguro de que desea cancelar el pedido?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="title_product_details">DETALLES DE PRODUCTO</string>
    <string name="lbl_product_description">Descripción del producto</string>
    <string name="no_stock">¡ No Disponible !</string>
    <string name="lbl_product_details_stock_quantity">Stock</string>
    <string name="btn_lbl_add_to_cart">Añadir al carrito</string>
    <string name="success_message_item_added_to_cart">Producto agregado!.</string>
    <string name="btn_lbl_go_to_cart">Ir al carrito</string>
    <string name="title_my_cart">MI CARRITO</string>
    <string name="no_cart_item_found">Sin productos en el carrito!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Envío</string>
    <string name="lbl_total_amount">Monto total</string>
    <string name="btn_lbl_checkout">Agregar dirección</string>
    <string name="action_cart">Mi carrito</string>
    <string name="lbl_out_of_stock">AGOTADO</string>
    <string name="msg_item_removed_successfully">Elemento eliminado con éxito.</string>
    <string name="msg_for_available_stock">¡El stock disponible es %1$s!. No puede agregar más que la cantidad de stock.</string>
    <string name="title_address_list">LISTA DE DIRECIONES</string>
    <string name="no_address_found">¡No se ha encontrado ninguna dirección!</string>
    <string name="lbL_add_address">Agregar dirección</string>
    <string name="title_add_address">AGREGAR DIRECCIÓN</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="hint_phone_number">Celular/Fijo</string>
    <string name="hint_ruc">RUC</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_zip_code">Código postal</string>
    <string name="hint_additional_note">Referencia</string>
    <string name="hint_other_details">Otros detalles</string>
    <string name="lbl_home">CASA</string>
    <string name="lbl_office">OFICINA</string>
    <string name="lbl_other">OTRO</string>
    <string name="err_msg_please_enter_full_name">Ingrese su nombre completo.</string>
    <string name="err_msg_please_enter_phone_number">Ingrese el número de teléfono.</string>
    <string name="err_msg_please_enter_address">Por favor ingrese la dirección.</string>
    <string name="err_msg_please_enter_zip_code">Ingrese el código postal.</string>
    <string name="err_msg_please_enter_other_details">Ingrese otros detalles.</string>
    <string name="err_your_address_added_successfully">Su dirección se agregó correctamente.</string>
    <string name="title_edit_address">EDITAR DIRECCIÓN</string>
    <string name="btn_lbl_update">ACTUALIZAR</string>
    <string name="msg_your_address_updated_successfully">Tu dirección se actualizó correctamente.</string>
    <string name="err_your_address_deleted_successfully">Su dirección se borró con éxito.</string>
    <string name="title_select_address">SELECCIONAR DIRECCIÓN</string>
    <string name="title_checkout">REALIZAR PAGO</string>
    <string name="checkout_lbl_product_items">Artículos</string>
    <string name="checkout_lbl_selected_address">Dirección seleccionada</string>
    <string name="checkout_lbl_items_receipt">Pagos</string>
    <string name="btn_lbl_place_order">REALIZAR PEDIDO</string>
    <string name="lbl_payment_mode">Método de pago</string>
    <string name="lbl_cash_on_delivery">&#160;Contra entrega</string>
    <string name="lbl_credit_card">&#160;Tarjeta de crédito/débito</string>
    <string name="no_orders_placed_yet">¡Aún no se realizaron compras!</string>
    <string name="title_my_order_details">DETALLES DEl PEDIDO</string>
    <string name="order_details_lbl">Detalles del pedido</string>
    <string name="order_details_lbl_order_id">ID de pedido</string>
    <string name="order_details_lbl_order_date">Fecha</string>
    <string name="order_details_lbl_order_status">Estado</string>
    <string name="order_status_pending">Pendiente</string>
    <string name="order_details_lbl_shipping_address">Dirección de Envío</string>
    <string name="order_status_in_process">Procesando</string>
    <string name="order_status_in_route">En ruta</string>
    <string name="order_status_finish">Entregado</string>
    <string name="order_sending">Enviando</string>
    <string name="title_sold_products">Pedidos</string>
    <string name="no_products_sold_out_yet">¡Sin pedidos!</string>
    <string name="title_sold_product_details">DETALLES DEL PRODUCTO</string>
    <string name="type_money">S/</string>
    <string name="active_gps_for_continue">Por favor activa tu ubicación para continuar...</string>
    <string name="active_gps">Activar GPS</string>
    <string name="permision_for_continue">Proporciona los permisos para continuar</string>
    <string name="require_permision">Esta aplicacion requiere de los permisos de ubicacion para poder utilizarse</string>
    <string name="ok">OK</string>
    <string name="type_of_product">Tipo de producto</string>
    <string name="food">Comidas</string>
    <string name="clothes_accesory">Calzado</string>
    <string name="title_order_success">PEDIDO REALIZADO !</string>
    <string name="continue_shopping">Seguir Comprando</string>
    <string name="show_orders">Ver compras</string>
    <string name="thanks_purchase">GRACIAS POR SU COMPRA !</string>
    <string name="text_success_order">Su pedido se ha realizado correctamente.Tome una captura a este comprobante ó visite la opción de pedidos para comprobar el progreso y obtener más detalles.</string>
</resources>